cozezone/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: cozezone
  labels:
    name: cozezone
